--- a/src/app.module.css
+++ b/src/app.module.css
@@ -14,7 +14,7 @@
   flex: 1 1 30%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
   .content {
     flex-direction: column;
   }
